3/3/14 #21 replace water property in model with direct access of Water constant at various use sites
3/3/14 #20 remove unused exponentRange parameter from LinearGraph constructor
3/3/14 #18 factor out options that are common to all ScientificNotationNode instantiations
3/3/14 #14 bind added to linked functions in MoleculeCountNode
3/3/14 #9 create arrow only for interactive graph indicators
3/3/14 #7 change '**' to '^' for exponent operator in model.txt
3/3/14 delete unused dropper-icon.png
3/3/14 #8 horizontally flip dropper images so that lighting is consistent with other parts of the sim
3/3/14 ratio: reduced number of molecules to 1000, use CanvasNode, performance is much better
3/3/14 update implementation-notes.txt
3/3/14 fixed logic for hiding 'ratio' feature
3/3/14 move PHScaleNode to inner type of MacroPHMeterNode, since it's only used there
3/3/14 replace GraphIndicator subtypes with factory functions
3/3/14 move molecules and atoms to common/view/molecules/
3/3/14 add flag to RatioNode for disabling feature, so that all aspects of this feature are in one file
3/3/14 fix x-spacing of log graph indicators, broken when major ticks were made longer
3/3/14 move html formulas to PHScaleConstants to avoid duplication
3/3/14 format all code to match PhetStyle.xml
3/3/14 migrate ph-scale.ScientificNotationNode to scenery-phet
3/3/14 add this.mutate(options) to ScientificNotationNode
3/3/14 migrate ph-scale.SubSupText to scenery-phet
3/3/14 position superscripts relative to cap line in SubSupText
3/3/14 generalize ph-scale.ZoomButton and migrate to scenery-phet
3/3/14 add this.mutate(options) to ZoomButton
3/3/14 make major ticks 50% longer on log scale
# 1.0.0-dev.15 2/27/14
2/28/14 reimplement 'H3O/OH ratio' check box label to use SubSupText and include color-coding
2/28/14 fix: H2O value is displaying at '55.0', should be '55'
2/28/14 use SubSupText for '10^E' ticks on log graph, remove 'no mantissa' support from ScientificNotationNode